Hero image has been installed and made adjustable to all screen sizes. Header, text and button has been implemented on the center of the image. Recent problem with hero image not fitting to the top of the page was resolved by reducing the margin-top of body. Beginning of introduction to further information about websitehas been developed, minor CSS as well as installation of an image has begun. Next need to align properties into two columns so image sits on the right hand side. Need to ensure this is consistent across all screen sizes.

--- a/html/style.css
+++ b/html/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-    padding-top: 100px;
+    padding-top: 85px;
     padding-bottom: 100px;
 }
 
@@ -37,7 +37,7 @@ header {
     position: fixed;
     z-index: 999;
     width: 100%;
-
+    margin: 0;
 }
 
 nav {
@@ -48,9 +48,7 @@ nav {
     background: var(--background);
     width: 100%;
     background-color: #81a9eb;
-    overflow: hidden;
-    height: 80px;
-    
+    overflow: hidden; 
 }
 
 nav ul {
@@ -72,18 +70,15 @@ nav a {
     text-transform: uppercase;
     padding: 10px;
     font-size: 15px;
-    border: none;
-    text-align: center;
-    outline: auto;
-    outline-style: round;
     border-radius: 5px;
-    border-style: none;
+    text-align: center;
 }
 
 nav a:hover {
     background-color: #2a6ad4;
     color: white;
     margin: 0;
+    
     
 }
 
@@ -118,34 +113,58 @@ nav a:hover {
 }
 
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/hacker.jpeg);
-    height: 50%;
-
     display: flex;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    background-attachment: fixed;
-    /* display: flex;
     flex-direction: column;
-    background-image: ;
-    height: 400px;
+    background-image: url(images/hacker.jpeg);
+    height: 500px;
+    width: 100%;
     align-self: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     align-items: center;
     justify-content: center;
-    text-align: center; */
 }
 
 .hero-text {
-    padding-top: 200px;
+    padding-top: 0px;
+    margin-top: none;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+}
+
+.button {
+    background-color: #5b8ee3;
+    color: azure;
+    font-size: 12px;
+    padding: 14px 23px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+    }
+
+.button:hover {
+    background-color: #2a6ad4;
+}
+
+.small-text {
+    background-color: aqua;
+    margin-right: 405px;
+    margin-top: none;
+}
+
+.sect-2 {
+    display: grid;
+    margin-left: 40px;
+    margin-top: 50px;
+}
+
+.vpn {
+    float: left;
+    width: 300px;
 }
